--- a/App/Presentation/MovieSummary/MovieSummaryViewController.xib
+++ b/App/Presentation/MovieSummary/MovieSummaryViewController.xib
@@ -4,11 +4,13 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieSummaryViewController" customModule="App" customModuleProvider="target">
             <connections>
+                <outlet property="movieSummaryTableView" destination="flJ-EW-dqf" id="OfQ-ta-gB3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,18 +19,26 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Qlk-zM-xZw">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Qlk-zM-xZw" userLabel="AppLogo">
                     <rect key="frame" x="147" y="64" width="120" height="39"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="39" id="ZH9-Xt-163"/>
                         <constraint firstAttribute="width" constant="120" id="znV-U4-320"/>
                     </constraints>
                 </imageView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="flJ-EW-dqf" userLabel="MovieSummaryTableView">
+                    <rect key="frame" x="0.0" y="133" width="414" height="729"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="flJ-EW-dqf" firstAttribute="top" secondItem="Qlk-zM-xZw" secondAttribute="bottom" constant="30" id="0wg-IZ-AdO"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="flJ-EW-dqf" secondAttribute="trailing" id="HAp-Z2-acL"/>
+                <constraint firstItem="flJ-EW-dqf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Iq4-9A-CYz"/>
                 <constraint firstItem="Qlk-zM-xZw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NHW-c6-KiI"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="flJ-EW-dqf" secondAttribute="bottom" id="NcY-wU-c6k"/>
                 <constraint firstItem="Qlk-zM-xZw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="aIS-tj-pW3"/>
             </constraints>
             <point key="canvasLocation" x="163.768115942029" y="138.61607142857142"/>
@@ -36,5 +46,8 @@
     </objects>
     <resources>
         <image name="logo" width="120" height="39"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
