--- a/App/Presentation/MovieSummary/MovieSummaryViewController.xib
+++ b/App/Presentation/MovieSummary/MovieSummaryViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieSummaryViewController" customModule="App" customModuleProvider="target">
             <connections>
+                <outlet property="loadingSpinner" destination="i8J-ka-gf1" id="OK4-LX-KWp"/>
                 <outlet property="movieSummaryTableView" destination="flJ-EW-dqf" id="OfQ-ta-gB3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -26,10 +27,14 @@
                         <constraint firstAttribute="width" constant="120" id="znV-U4-320"/>
                     </constraints>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="flJ-EW-dqf" userLabel="MovieSummaryTableView">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="134" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="flJ-EW-dqf" userLabel="MovieSummaryTableView">
                     <rect key="frame" x="0.0" y="133" width="414" height="729"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="i8J-ka-gf1">
+                    <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                    <color key="color" systemColor="systemRedColor"/>
+                </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -40,6 +45,8 @@
                 <constraint firstItem="Qlk-zM-xZw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NHW-c6-KiI"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="flJ-EW-dqf" secondAttribute="bottom" id="NcY-wU-c6k"/>
                 <constraint firstItem="Qlk-zM-xZw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="aIS-tj-pW3"/>
+                <constraint firstItem="i8J-ka-gf1" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="e8Y-TS-nea"/>
+                <constraint firstItem="i8J-ka-gf1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jX4-Ae-Zog"/>
             </constraints>
             <point key="canvasLocation" x="163.768115942029" y="138.61607142857142"/>
         </view>
@@ -48,6 +55,9 @@
         <image name="logo" width="120" height="39"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
