--- a/App/Presentation/MovieSummary/MovieSummaryViewController.xib
+++ b/App/Presentation/MovieSummary/MovieSummaryViewController.xib
@@ -21,14 +21,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Qlk-zM-xZw" userLabel="AppLogo">
-                    <rect key="frame" x="147" y="64" width="120" height="39"/>
+                    <rect key="frame" x="147" y="44" width="120" height="39"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="39" id="ZH9-Xt-163"/>
                         <constraint firstAttribute="width" constant="120" id="znV-U4-320"/>
                     </constraints>
                 </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="134" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="flJ-EW-dqf" userLabel="MovieSummaryTableView">
-                    <rect key="frame" x="0.0" y="133" width="414" height="729"/>
+                    <rect key="frame" x="0.0" y="113" width="414" height="749"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="i8J-ka-gf1">
@@ -44,7 +44,7 @@
                 <constraint firstItem="flJ-EW-dqf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Iq4-9A-CYz"/>
                 <constraint firstItem="Qlk-zM-xZw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NHW-c6-KiI"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="flJ-EW-dqf" secondAttribute="bottom" id="NcY-wU-c6k"/>
-                <constraint firstItem="Qlk-zM-xZw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="aIS-tj-pW3"/>
+                <constraint firstItem="Qlk-zM-xZw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="aIS-tj-pW3"/>
                 <constraint firstItem="i8J-ka-gf1" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="e8Y-TS-nea"/>
                 <constraint firstItem="i8J-ka-gf1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jX4-Ae-Zog"/>
             </constraints>
