--- a/App/Presentation/Main/Movies/MovieDetail/MovieDetailViewController.xib
+++ b/App/Presentation/Main/Movies/MovieDetail/MovieDetailViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -16,7 +16,6 @@
                 <outlet property="duration" destination="paQ-HB-8Xr" id="9VZ-jp-f4z"/>
                 <outlet property="loadingSpinner" destination="5kq-R6-hRB" id="aXP-O8-dIr"/>
                 <outlet property="movieImage" destination="Gra-GX-dCC" id="1mn-7r-AEz"/>
-                <outlet property="movieTitle" destination="WEH-9k-7nj" id="6fn-9J-jcl"/>
                 <outlet property="overview" destination="50y-cc-CyO" id="eeB-bF-aWw"/>
                 <outlet property="rate" destination="5NO-Dd-5kt" id="tJl-aq-yZd"/>
                 <outlet property="releaseDate" destination="i95-2i-zoG" id="2Sk-LJ-lp7"/>
@@ -32,7 +31,7 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zaX-cD-dA1" userLabel="ContentView">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="605.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="579.5"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tgg-ie-445">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="280"/>
@@ -55,16 +54,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p7T-LP-wSo" userLabel="Details">
-                                    <rect key="frame" x="35" y="312" width="344" height="293.5"/>
+                                    <rect key="frame" x="35" y="312" width="344" height="267.5"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEH-9k-7nj" userLabel="Movie Name">
-                                            <rect key="frame" x="0.0" y="0.0" width="344" height="29"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sRF-7E-Mvh" userLabel="Rate">
-                                            <rect key="frame" x="0.0" y="50" width="45" height="20"/>
+                                            <rect key="frame" x="0.0" y="24" width="45" height="20"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="717-DH-dQ9" userLabel="rateImage">
                                                     <rect key="frame" x="0.0" y="-0.5" width="20" height="20"/>
@@ -83,7 +76,7 @@
                                             </subviews>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5gW-FN-AvG" userLabel="Duration">
-                                            <rect key="frame" x="70" y="50" width="86" height="20"/>
+                                            <rect key="frame" x="70" y="24" width="86" height="20"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dcA-3p-wtV" userLabel="durationImage">
                                                     <rect key="frame" x="0.0" y="0.5" width="20" height="19"/>
@@ -102,16 +95,16 @@
                                             </subviews>
                                         </stackView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s1d-Ew-tx6" userLabel="Release Date">
-                                            <rect key="frame" x="0.0" y="85" width="344" height="50.5"/>
+                                            <rect key="frame" x="0.0" y="59" width="344" height="50.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ehE-Ax-vWe">
-                                                    <rect key="frame" x="0.0" y="17" width="92.5" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lançamento:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ehE-Ax-vWe" userLabel="Release Date">
+                                                    <rect key="frame" x="0.0" y="17" width="87.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Month Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i95-2i-zoG">
-                                                    <rect key="frame" x="103.5" y="17" width="73" height="17"/>
+                                                    <rect key="frame" x="98.5" y="17" width="73" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -127,16 +120,16 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lpt-6n-XzS" userLabel="Budget">
-                                            <rect key="frame" x="0.0" y="135.5" width="344" height="50.5"/>
+                                            <rect key="frame" x="0.0" y="109.5" width="344" height="50.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Budget:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pX-Qa-bDd">
-                                                    <rect key="frame" x="0.0" y="17" width="53.5" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Orçamento:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pX-Qa-bDd" userLabel="Budget">
+                                                    <rect key="frame" x="0.0" y="17" width="79.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$000.000.000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6S-B9-QBP">
-                                                    <rect key="frame" x="64.5" y="17" width="91.5" height="17"/>
+                                                    <rect key="frame" x="90.5" y="17" width="91.5" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -152,9 +145,9 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Auy-j8-DTW" userLabel="Overview">
-                                            <rect key="frame" x="0.0" y="211" width="344" height="62.5"/>
+                                            <rect key="frame" x="0.0" y="185" width="344" height="62.5"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="c2u-Lo-fAZ" userLabel="Title">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopse" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="c2u-Lo-fAZ" userLabel="Title">
                                                     <rect key="frame" x="0.0" y="0.0" width="344" height="22"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
@@ -179,15 +172,12 @@
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="WEH-9k-7nj" secondAttribute="trailing" id="06P-0i-96K"/>
                                         <constraint firstItem="lpt-6n-XzS" firstAttribute="top" secondItem="s1d-Ew-tx6" secondAttribute="bottom" id="9eb-FK-gjC"/>
-                                        <constraint firstItem="WEH-9k-7nj" firstAttribute="top" secondItem="p7T-LP-wSo" secondAttribute="top" id="FnW-H2-F9h"/>
-                                        <constraint firstItem="sRF-7E-Mvh" firstAttribute="top" secondItem="WEH-9k-7nj" secondAttribute="bottom" constant="21" id="Gr2-ra-s1F"/>
-                                        <constraint firstItem="WEH-9k-7nj" firstAttribute="leading" secondItem="p7T-LP-wSo" secondAttribute="leading" id="GtS-zG-7kt"/>
+                                        <constraint firstItem="sRF-7E-Mvh" firstAttribute="top" secondItem="p7T-LP-wSo" secondAttribute="top" constant="24" id="Gr2-ra-s1F"/>
                                         <constraint firstAttribute="trailing" secondItem="Auy-j8-DTW" secondAttribute="trailing" id="IPW-FR-OfM"/>
                                         <constraint firstItem="5gW-FN-AvG" firstAttribute="leading" secondItem="sRF-7E-Mvh" secondAttribute="trailing" constant="25" id="OHU-22-MgR"/>
                                         <constraint firstItem="Auy-j8-DTW" firstAttribute="leading" secondItem="p7T-LP-wSo" secondAttribute="leading" id="RJi-GC-UhW"/>
-                                        <constraint firstItem="5gW-FN-AvG" firstAttribute="top" secondItem="WEH-9k-7nj" secondAttribute="bottom" constant="21" id="VkV-oz-Ikj"/>
+                                        <constraint firstItem="5gW-FN-AvG" firstAttribute="top" secondItem="p7T-LP-wSo" secondAttribute="top" constant="24" id="VkV-oz-Ikj"/>
                                         <constraint firstItem="s1d-Ew-tx6" firstAttribute="leading" secondItem="p7T-LP-wSo" secondAttribute="leading" id="XeH-0q-dbv"/>
                                         <constraint firstItem="s1d-Ew-tx6" firstAttribute="top" secondItem="sRF-7E-Mvh" secondAttribute="bottom" constant="15" id="bZw-D6-VI8"/>
                                         <constraint firstAttribute="trailing" secondItem="lpt-6n-XzS" secondAttribute="trailing" id="dUV-rZ-hae"/>
@@ -231,7 +221,7 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="d37-Xy-7Hk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="V38-6A-hOv"/>
                 <constraint firstAttribute="bottom" secondItem="d37-Xy-7Hk" secondAttribute="bottom" id="V5L-58-KJX"/>
