--- a/App/Presentation/Main/Movies/MovieSummary/MovieSummaryViewController.xib
+++ b/App/Presentation/Main/Movies/MovieSummary/MovieSummaryViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,15 +20,8 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Qlk-zM-xZw" userLabel="AppLogo">
-                    <rect key="frame" x="147" y="44" width="120" height="39"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="39" id="ZH9-Xt-163"/>
-                        <constraint firstAttribute="width" constant="120" id="znV-U4-320"/>
-                    </constraints>
-                </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="134" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="flJ-EW-dqf" userLabel="MovieSummaryTableView">
-                    <rect key="frame" x="0.0" y="113" width="414" height="749"/>
+                    <rect key="frame" x="0.0" y="68" width="414" height="794"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="i8J-ka-gf1">
@@ -37,22 +30,19 @@
                 </activityIndicatorView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="flJ-EW-dqf" firstAttribute="top" secondItem="Qlk-zM-xZw" secondAttribute="bottom" constant="30" id="0wg-IZ-AdO"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="flJ-EW-dqf" secondAttribute="trailing" id="HAp-Z2-acL"/>
                 <constraint firstItem="flJ-EW-dqf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Iq4-9A-CYz"/>
-                <constraint firstItem="Qlk-zM-xZw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NHW-c6-KiI"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="flJ-EW-dqf" secondAttribute="bottom" id="NcY-wU-c6k"/>
-                <constraint firstItem="Qlk-zM-xZw" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="aIS-tj-pW3"/>
                 <constraint firstItem="i8J-ka-gf1" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="e8Y-TS-nea"/>
                 <constraint firstItem="i8J-ka-gf1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jX4-Ae-Zog"/>
+                <constraint firstItem="flJ-EW-dqf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="24" id="r6G-H7-b3M"/>
             </constraints>
             <point key="canvasLocation" x="163.768115942029" y="138.61607142857142"/>
         </view>
     </objects>
     <resources>
-        <image name="logo" width="120" height="39"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
