--- a/App/Presentation/Main/Movies/MovieSummary/MovieSummaryViewController.xib
+++ b/App/Presentation/Main/Movies/MovieSummary/MovieSummaryViewController.xib
@@ -20,30 +20,30 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="134" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="flJ-EW-dqf" userLabel="MovieSummaryTableView">
-                    <rect key="frame" x="0.0" y="72" width="414" height="790"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="insetGrouped" rowHeight="134" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="flJ-EW-dqf" userLabel="MovieSummaryTableView">
+                    <rect key="frame" x="0.0" y="48" width="414" height="848"/>
+                    <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                     <color key="separatorColor" systemColor="systemGray3Color"/>
                     <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="flJ-EW-dqf" secondAttribute="trailing" id="HAp-Z2-acL"/>
+                <constraint firstAttribute="trailing" secondItem="flJ-EW-dqf" secondAttribute="trailing" id="HAp-Z2-acL"/>
                 <constraint firstItem="flJ-EW-dqf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Iq4-9A-CYz"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="flJ-EW-dqf" secondAttribute="bottom" id="NcY-wU-c6k"/>
-                <constraint firstItem="flJ-EW-dqf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="24" id="r6G-H7-b3M"/>
+                <constraint firstAttribute="bottom" secondItem="flJ-EW-dqf" secondAttribute="bottom" id="NcY-wU-c6k"/>
+                <constraint firstItem="flJ-EW-dqf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="r6G-H7-b3M"/>
             </constraints>
             <point key="canvasLocation" x="163.768115942029" y="138.61607142857142"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGroupedBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
